src/index.css
#root {
  padding: 0 2rem;
}

:root {
  font-family: "Space Grotesk", "Space Mono", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /** CSS LIGHT THEME PRIMARY COLORS */
  --color-primary-l100: #fec8b0;
  --color-primary-l200: #fdba9e;
  --color-primary-l300: #faad8b;
  --color-primary-l400: #f79f78;
  --color-primary-l500: #f39166;
  --color-primary-l600: #ef8354;
  
  /** CSS LIGHT THEME SURFACE COLORS */
  --color-surface-l100: #ffffff;
  --color-surface-l150: #e8e8e8;
  /* --color-surface-l150: #bcbec0; */
  --color-surface-l200: #8c8f93;
  --color-surface-l300: #727479;
  --color-surface-l400: #595b61;
  --color-surface-l500: #40434a;
  --color-surface-l600: #292d34;

  /** CSS DARK THEME PRIMARY COLORS */
  --color-primary-d100: #ef8354;
  --color-primary-d200: #f39166;
  --color-primary-d300: #f79f78;
  --color-primary-d400: #faad8b;
  --color-primary-d500: #fdba9e;
  --color-primary-d600: #fec8b0;

  /** CSS DARK THEME SURFACE COLORS */
  --color-surface-d100: #14181f;
  --color-surface-d200: #292d34;
  --color-surface-d300: #40434a;
  --color-surface-d400: #595b61;
  --color-surface-d500: #727479;
  --color-surface-d600: #8c8f93;

  --content-width: 860px;
  --content-width--small: 560px;
  --content-width--medium: 700px;

}

/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: light-dark(var(--color-surface-l100), var(--color-surface-d100));
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: light-dark(var(--color-surface-l150), var(--color-surface-d200));
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: light-dark(var(--color-surface-l200), var(--color-surface-d300));
}

.two--col {
  display: flex;
  flex-flow: row-reverse wrap;
  justify-content: start;
  gap: 1rem;
}

.light {
  /* forces light color-scheme */
  color-scheme: light;
}
.dark {
  /* forces dark color-scheme */
  color-scheme: dark;
}

a {
  font-weight: 500;
  color: inherit;
  text-decoration: inherit;
}

a:hover {
  color: light-dark(var(--color-primary-l600),var(--color-primary-d600) );
}

body {
  margin: 0;
  display: flex;
  flex-flow: column nowrap;
  place-items: center;
  min-width: 400px;
  min-height: 100vh;
  color: light-dark(black,white);
  background-color: light-dark(var(--color-surface-l100), var(--color-surface-d100));
}

.layout {
  padding: 1rem 0rem;
  max-width: var(--content-width);
}

.introduction {
  display: flex;
  flex-flow: column nowrap;
  align-items: start;
}


.introduction > span {
  font-size: 3em;
  font-weight: 300;
}

.introduction > p {
  font-weight: 300;
  text-align: justify;
}

.introduction > p > a {
  color: light-dark(var(--color-primary-l600),var(--color-primary-d600) );
}

.introduction > p > a:hover {
  color: light-dark(var(--color-primary-l500),var(--color-primary-d500) );
}

.introduction--cv {
  padding: 0 1rem 0 0;
  width: 100%;
  margin: 0.5rem 0 1rem 0;
}

.introduction--cv--top {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}

.introduction--cv > p {
  font-weight: 300;
  font-size: 0.8rem;
  margin: 0.2rem 0;

}

.introduction--cv--stars {
  color: light-dark(var(--color-primary-l600),var(--color-primary-d600));
  width: 68px;
}

#photo--border {
  background-color: light-dark(var(--color-surface-l150),var(--color-surface-d200) );
  border-radius: 3rem;
  padding: 2rem;
  margin-top: 2rem;
  height: 358px;
  width: 358px;
}

#photo--border > img {
  border-radius: 3rem;
  width: 100%;
}

#socials--container {
  display: flex;
  justify-content: center;
  gap: 1rem;
  margin-top: 2rem;
}


h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  max-width: var(--content-width);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding: 1.25rem 0rem;
  border-bottom: solid light-dark(var(--color-surface-l300),var(--color-surface-d300) );
  background-color: light-dark(var(--color-surface-l100),var(--color-surface-d100) );
}

nav > div {
  display: flex;
  align-items: center;
  justify-content: center;
}

nav > div > ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav > div > ul > li { 
  display: inline;
  padding: 0 1rem;
}

nav > div > ul > li > a {
  font-weight: 300;
}

nav > a > span {
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  letter-spacing: -1.085px;
  font-family: "Space Mono";
}

nav > div > img {
  color: #fff;
  margin: 8px;
}

/* Dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  position: absolute;
  color: inherit;
  top: 0px;
  right: 0px;
  background-color: light-dark(var(--color-surface-l150),var(--color-surface-d200) );
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

/* Show the dropdown menu on hover */
.nav--dropdown:hover .dropdown-content {
  display: block;
}

/* Links inside the dropdown */
.dropdown-content a {
  float: none;
  color: inherit;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  text-align: left;
}

/* Add a grey background color to dropdown links on hover */
.dropdown-content a:hover {
  background-color: light-dark(var(--color-surface-l200),var(--color-surface-d300) );
}

.dropbtn {
  padding: 0;
  background-color: inherit;
}


@media only screen and (max-width: 560px) {
  #root {
    --content-width: 400px;
  }
  .nav--full {
    display: none;
  }

  .codecard {
    min-height: auto;
    max-width: 400px;
    height: auto;
    width: auto:
  }
  .introduction--col {
    max-width: var(--content-width);
  }
  #photo--border {
    height: 300px;
    width: 300px;
  }
}
/* ... */

